# vxp_devkit

./: README.md  build.sh
doc/riscv-Xvpfloat-isa-manual/: sourceme.csh
doc/riscv-Xvpfloat-isa-manual/src/: app_model.tex  debug.tex  implementations.tex  intro.tex  isa.tex  mem_model.tex  memory_format.tex  perf_monitor.tex  preamble.tex  preface.tex  riscv-Xvpfloat-spec.bib  riscv-Xvpfloat-spec.tex  sys_model.tex  sys_registers.tex
external_includes/: vrp_ioctl.h
external_libraries/: install.sh
external_libraries/pkgconfig/: gmp.pc  mpc.pc  mpfr.pc  oski.pc
matrix_sdk/: CMakeLists.txt  linux_configuration_parameters.cmake  matrix_sdk.pc.in  vrp_configuration_parameters.cmake
matrix_sdk/include/: OSKIHelper.hpp  Preconditionners.hpp
matrix_sdk/include/MTXUtil/: MTXParser.hpp  crs.h  crsIO.h  mmio.h
matrix_sdk/include/Matrix/: BCSR.h  CSR.h  DENSE.h  complex.h  matrix.h
matrix_sdk/src/MTXUtil/: MTXParser.cpp  crs.c  crsIO.c  mmio.c
matrix_sdk/src/Matrix/: matrix.cpp  matrixComplex.cpp
matrix_sdk/src/OSKIHelper/: OSKIHelper.cpp
matrix_sdk/src/Preconditionners/: jacobi.cpp
modules/mpfr/: 4.1.0
modules/oski/: 1.0.1h
modules/vrp/sdk/linux_x86_64/: current-dev-linux_x86_64
vp_sdk/: CMakeLists.txt  vp_sdk.pc.in
vp_sdk/include/: VPSolvers.hpp
vp_sdk/include/Eigen_interface/: EigenVPFloatSupport.hpp
vp_sdk/include/VPSDK/: VBLAS.hpp  VBLASComplex.hpp  VBLASConfig.hpp  VMath.hpp  VPComplex.hpp  VPFloat.hpp
vp_sdk/include/VRPOffload/: vrp_Matrix_BCSR_serializer.hpp  vrp_Matrix_CSR_serializer.hpp  vrp_Matrix_DENSE_serializer.hpp  vrp_Matrix_serializer.hpp  vrp_argument.hpp  vrp_argument_array.hpp  vrp_driver_interface.hpp  vrp_offloading.hpp
vp_sdk/src/VPSDK/VBLAS/: VBLASComplex_MPFR.cpp  VBLASComplex_VRP.cpp  VBLASConfig.cpp  VBLASConfig_Linux.cpp  VBLASConfig_VRP.cpp  VBLASPerfMonitor.cpp  VBLAS_MPFR.cpp  VBLAS_VRP.cpp
vp_sdk/src/VPSDK/VMath/: VMath_MPFR.cpp  VMath_VRP.cpp
vp_sdk/src/VPSDK/VPComplex/: VPComplexArray_MPFR.cpp  VPComplexArray_VRP.cpp  VPComplexArray_common.cpp  VPComplex_MPFR.cpp  VPComplex_VRP.cpp  VPComplex_common.cpp
vp_sdk/src/VPSDK/VPFloatpp/: VPFloat_MPFR.cpp  VPFloat_VRP.cpp
vp_sdk/src/VPSolvers/bicg/: bicg_Linux.cpp  bicg_VRP.cpp  bicg_kernel.cpp  bicg_kernel.hpp
vp_sdk/src/VPSolvers/bicgstab/: bicgstab_Linux.cpp  bicgstab_VRP.cpp  bicgstab_kernel.cpp  bicgstab_kernel.hpp
vp_sdk/src/VPSolvers/cg/: cg_Linux.cpp  cg_VRP.cpp  cg_kernel.cpp  cg_kernel.hpp
vp_sdk/src/VPSolvers/precond_bicg/: precond_bicg_Linux.cpp  precond_bicg_VRP.cpp  precond_bicg_kernel.cpp  precond_bicg_kernel.hpp
vp_sdk/src/VPSolvers/precond_cg/: precond_cg_Linux.cpp  precond_cg_VRP.cpp  precond_cg_kernel.cpp  precond_cg_kernel.hpp
vp_sdk/src/VPSolvers/qmr/: qmr_Linux.cpp  qmr_VRP.cpp  qmr_kernel.cpp  qmr_kernel.hpp
vp_sdk/src/VRPOffload/: vrp_Matrix_BCSR_serializer.cpp  vrp_Matrix_CSR_serializer.cpp  vrp_Matrix_DENSE_serializer.cpp  vrp_Matrix_serializer.cpp  vrp_argument.cpp  vrp_argument_array.cpp  vrp_driver_interface.cpp
vp_sdk/vp_sdk_unit_tests/: nonreg.sh
vp_sdk/vp_sdk_unit_tests/test_eigen/: Makefile.linux  Makefile.vrp  test_eigen.cpp
vp_sdk/vp_sdk_unit_tests/test_matrix/: Makefile.linux  test_matrix.cpp
vp_sdk/vp_sdk_unit_tests/test_std_complex/: Makefile.linux  Makefile.vrp  test_std_complex.cpp
vp_sdk/vp_sdk_unit_tests/test_vblas_complex/: Makefile.linux  Makefile.vrp  test.mtx  test_vblas_complex.cpp
vp_sdk/vp_sdk_unit_tests/test_vgemvd/: Makefile.linux  test_vgemvd.cpp
vp_sdk/vp_sdk_unit_tests/test_vpcomplex/: Makefile.linux  Makefile.vrp  test_vpcomplex.cpp
vp_sdk/vp_sdk_unit_tests/test_vpfloatpp/: Makefile.linux  Makefile.vrp  test_vpfloatpp.cpp
vp_sdk/vp_sdk_unit_tests/test_vsqrt/: Makefile  Makefile.linux  Makefile.vrp  test_vsqrt.cpp
vp_sdk/vp_sdk_unit_tests/test_vsqrt/data/: random_1001.h
vrp_sdk/: .gitignore  CMakeLists.txt  Makefile  Makefile.mpfr  Makefile.novrp  Makefile.riscv-bare-cea  Makefile.vrp  Makefile.ydblas  linux_configuration_parameters.cmake  vrp_sdk.pc.in  vrp_sdk_headers_only.pc.in
vrp_sdk/doc/: ManualVPFloat.bib  ManualVPFloat.tex
vrp_sdk/include/VRPSDK/: cache.h  compiler.h  spvblas.h  vblas.h  vblas_mt.h  vblas_perfmonitor.h  vmath.h  vutils.h
vrp_sdk/include/VRPSDK/asm/: vpfloat.h  vpfloat_defs.h
vrp_sdk/include/VRPSDK/perfcounters/: cpu.h
vrp_sdk/include/VRPSDK/spvblas/vusmv/: BCSR_vusmv_NxM.h  CSR_vusmv_NxM.h  vusmv.h
vrp_sdk/scripts/: README.md  build_mpfr.sh
vrp_sdk/src/VRPSDK/: vblas_perfmonitor.c
vrp_sdk/src/VRPSDK/perfcounters/: cpu.c
vrp_sdk/src/VRPSDK/spvblas/vusmv/: vusmv.c
vrp_sdk/src/VRPSDK/spvblas/vusmv/BCSR/: BCSR_vusmv_1x1.c  BCSR_vusmv_2x1.c  BCSR_vusmv_3x1.c  BCSR_vusmv_4x1.c  BCSR_vusmv_5x1.c  BCSR_vusmv_6x1.c  BCSR_vusmv_7x1.c  BCSR_vusmv_8x1.c  BCSR_vusmv_NxM.c
vrp_sdk/src/VRPSDK/spvblas/vusmv/CSR/: CSR_vusmv_NxM.c
vrp_sdk/src/VRPSDK/vblas/: vblas_complex.c  vblas_vaxpy.c  vblas_vcopy.c  vblas_vdot.c  vblas_vgemv.c  vblas_vscal.c  vblas_vtrsv.c
vrp_sdk/src/VRPSDK/vblas_mt/: vblas_mt.c  vblas_mt_vgemv.c
vrp_sdk/src/VRPSDK/vmath/: vmath.c
vrp_sdk/src/VRPSDK/vutils/: vutils.c
vrp_sdk/user_makefile/: makefile.linux.double  makefile.linux.mpfr
vrp_sdk/vrp_sdk_firmware/: Makefile  build_sdk_firmware_vck190.sh  build_sdk_firmware_vcu128.sh  makefile.vrp_sdk  vrp_solver_bicg_firmware.cpp  vrp_solver_bicgstab_firmware.cpp  vrp_solver_cg_firmware.cpp  vrp_solver_precond_cg_firmware.cpp  vrp_solver_qmr_firmware.cpp
vrp_sdk/vrp_sdk_firmware/utils/: alignment.h
vrp_sdk_linux_apps/: LICENSE
vrp_sdk_linux_apps/vrp_run_bare_app/: makefile.vrp_sdk  vrp_run_bare_app.cpp
vrp_sdk_linux_apps/vrp_test_solver/: makefile.vrp_sdk  vrp_test_solver.cpp
vrp_sdk_linux_apps/vrp_vfio_load/: Makefile  main.c  makefile.vrp_sdk  vrp_init.c  vrp_init.h  vrp_ioctl.h  vrp_irq.c  vrp_irq.h  vrp_vfio.c  vrp_vfio.h
vrp_sdk_linux_apps/vrp_vfio_load/script/: vrp_dynlink.sh  vrp_linkcmds
